--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "concurrently": "^7.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
     "mongoose": "^6.6.5",
     "morgan": "^1.10.0",
